--- a/client/components/DateRangeFilter/DateRangeFilter.css
+++ b/client/components/DateRangeFilter/DateRangeFilter.css
@@ -29,7 +29,7 @@
 
 .filter-header span {
   font-size: 14px;
-  color: #6b645b;
+  color: #d1d5db;
   font-weight: 500;
 }
 
@@ -97,7 +97,7 @@
 .input-group label {
   font-size: 13px;
   font-weight: 500;
-  color: #6b645b;
+  color: #d1d5db;
 }
 
 .input-group input {
